# fizzbuzz-kata

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile
.github/workflows/: devcontainer.yaml
docs/: requirements.md  tdd.md
src/fizzbuzz/: main.py
tests/: test_main.py
