[project]
name = "fizzbuzz-kata"
version = "0.1.0"
description = "FizzBuzz kata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "pyright>=1.1.400",
    "pylint>=3.3.6",
    "ruff>=0.11.7",
]

[project.scripts]
fizzbuzz = "fizzbuzz.main:app"

[tool.hatch.build.targets.wheel]
packages = [
    "src/fizzbuzz",
]
